--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,10 @@ dependencies = [
     "torchaudio>=2.9.1",
     "uvicorn>=0.38.0",
 ]
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+]
